@@ -4,14 +4,10 @@
 
 {% block portal-tabs %}
 <ul>
-  <li class="selected"><a href="/">Overzicht</a></li
-  ><li class="last"><a href="/analysis">Analyse</a></li>
+  <li class="selected"><a href="/">Overzicht</a></li>
+  <li class="last"><a href="/analysis">Analyse</a></li>
 </ul>
 {% endblock portal-tabs %}
-
-{% block breadcrumbs %}
-<a href="{% url homepage %}">home</a>
-{% endblock %}
 
 {% block sidebar %}
 <div class="sidebarbox sidebarbox-stretched">
