@@ -5,4 +5,14 @@ Changelog of lizard-krw
 0.1 (unreleased)
 ----------------
 
-- Initial library skeleton created by thaskel.  [your name]
+- Copy the following items from krw-waternet:
+
+   - models
+   - views
+   - urls
+   - templates
+   - layers
+   - admin
+   - js/css
+
+- Initial library skeleton created by nensskel.  [Jack]
